--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,13 +17,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Source Code
-        uses: actions/checkout@v2
-      - name: Build Docker Image and Publish
-        uses: docker/build-push-action@v1
+        uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to GitHib Packages
+        uses: docker/login-action@v3
         with:
+          registry: docker.pkg.github.com
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: jmgrimes/bookings-backend-users-subgraph/bookings-backend-users-subgraph
-          tag_with_ref: true
+      - name: Build Docker Image and Push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          tag: docker.pkg.github.com/jmgrimes/bookings-backend-users-subgraph/bookings-backend-users-subgraph:${{ github.ref_name }}
           push: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/heads/release/') || startsWith(github.ref, 'refs/tags/') }}
