--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,26 +11,43 @@ on:
   release:
     types:
       - published
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
-      - name: Checkout Source Code
+      - id: checkout
+        name: Checkout Source Code
         uses: actions/checkout@v3
-      - name: Set up QEMU
+      - id: setup-qemu
+        name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
+      - id: setup-buildx
+        name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Login to GitHib Packages
+      - id: docker-login
+        name: Login to GitHib Packages
         uses: docker/login-action@v3
         with:
-          registry: docker.pkg.github.com
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build Docker Image and Push
+      - id: docker-metadata
+        name: Extract Metadata for Docker
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+      - id: docker-build-push
+        name: Build Docker Image and Push
         uses: docker/build-push-action@v5
         with:
           context: .
-          tags: docker.pkg.github.com/jmgrimes/bookings-backend-users-subgraph/bookings-backend-users-subgraph:${{ github.ref_name }}
+          tags: ${{ steps.docker-metadata.outputs.tags }}
+          labels: ${{ steps.docker-metadata.outputs.labels }}
           push: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/heads/release/') || startsWith(github.ref, 'refs/tags/') }}
