--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bookings-backend-users",
+  "name": "bookings-backend-users-subgraph",
   "version": "1.0.0",
   "description": "Backend application supporting Users for the booking application.",
   "author": "Jonah Grimes",
@@ -7,7 +7,7 @@
   "license": "CC0-1.0",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -32,7 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.8.1",
-    "graphql-ws": "^5.14.2",
+    "graphql-ws": "^5.14.3",
     "mongoose": "^8.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
